# bank-statement-parser

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/bank_statement_parser/: __init__.py  cli.py  exceptions.py  models.py
src/bank_statement_parser/exporters/: __init__.py  json.py
src/bank_statement_parser/parsers/: __init__.py  base.py  csv.py
tests/: conftest.py  test_cli.py  test_exporters.py  test_models.py  test_registry.py
tests/fixtures/: sample.csv
tests/parsers/: test_csv.py
