[project]
name = "bank-statement-parser"
version = "0.1.0"
description = "Parse bank statements from various formats into a consistent transaction model"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
bsp = "bank_statement_parser.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "commitizen>=4.13.10",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "ty>=0.0.33",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # bandit (security)
    "T20", # flake8-print (no stray print statements)
    "PTH", # use pathlib over os.path
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = ["S603"] # subprocess calls with list args are safe

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "T20"]         # allow assert and print in tests
"src/bank_statement_parser/cli.py" = ["T20"] # CLI may print to stdout

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", ".venv/*"]


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = ["pyproject.toml:version"]
